--- a/exam.html
+++ b/exam.html
@@ -21,7 +21,7 @@
   <li style="float:right"><a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B0"><img src="qestion.png" height="16" width="16"/></a></li>
 </ul>
 <div  style="text-align: center;"><H1>Контактные данные:</H1></div>
-<form  action="https://www.google.ru/" id="feedbackForm"  method="get">
+<form  action="https://www.google.ru/" id="feedbackForm" name="q" method="get">
   <label for="famil">Фамилия:</label>
   <input type="text" id="famil" name="famil" required>
 
@@ -38,7 +38,7 @@
 </form><br><br>
 
 <div  style="text-align: center;"><H1>Ваше мнение:</H1></div>
-<form  action="https://www.google.ru/" id="secondForm"  method="get">
+<form  action="https://www.google.ru/" id="secondForm"  name="q"  method="get">
   <label for="radio">Вы любите делиться мнением?</label><br>
   <div id="radio">
     <input type="radio" id="r1" name="r1">
